# AlgoVeda

./: .env.production  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  docker-compose.yml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
asm/x86_64/: simd_operations.asm
backtesting/strategies/: equity_strategy.py  ml_strategy.py  options_strategy.py
calculations/options_pricing/: black_scholes_gpu.rs
ci-cd/: github-actions.yml
cmd/: main.go
config/: app_config.rs  database_config.rs  monitoring_config.rs  risk_config.rs  security_config.rs  trading_config.rs
configs/: production.yaml
core-engine/src/: lib.rs  main.rs
cpp/src/: memory_manager.cpp  simd_operations.cpp  thread_pool.cpp
database/migrations/: complete_schema.sql
dhan_integration/: enhanced_api_client.rs
docker/: production.dockerfile
frontend/: package.json:
infrastructure/kubernetes/: trading-platform-deployment.yaml
infrastructure/monitoring/: platform-monitoring.yaml
internal/websocket/: connection_manager.go  message_router.go  protocol_handler.go
k8s/: deployment.yaml  production-deployment.yaml
kubernetes/production/: deployment.yaml
load-balancer/: nginx.conf
machine_learning/feature_engineering/: technical_features.rs
market_data/: ultra_fast_feed_handler.rs
monitoring/: prometheus-config.yaml  prometheus.yml
nginx/: nginx.conf
protocols/fix/: fix_gateway.py
scripts/: deploy-production.sh  deploy.sh
sql/: init.sql
src/: lib.rs  main.rs
src/ai/: ml_trading_strategies.rs
src/alternative_data/: news_sentiment.py
src/analytics/: advanced_attribution.rs  realtime_dashboard.rs
src/calculations/: options_pricing.rs
src/commodities/: commodity_trading_engine.rs
src/compliance/: regulatory_reporting.rs
src/config/: app_config.rs  mod.rs  trading_config.rs
src/cross_asset/: fixed_income_engine.rs  fx_trading_engine.rs
src/cryptocurrency/: crypto_trading_engine.rs
src/cython/: fast_backtester.pyx  portfolio_engine.pyx  risk_calculator.pyx  technical_indicators.pyx
src/dhan_integration/: enhanced_api_client.rs
src/execution/: smart_order_routing.rs
src/hooks/: useBacktestingAnalytics.ts  useRealtimeVisualization.ts
src/machine_learning/: feature_engineering.rs
src/market_data/: feed_handler.rs  ultra_fast_feed_handler.rs
src/order_management/: oms_engine.rs
src/portfolio/: performance_attribution.rs
src/prime_brokerage/: multi_prime_manager.rs
src/python/: setup.py
src/risk_engine/: var_calculator.rs
src/rust/: parallel_backtester.rs  ultra_fast_backtester.rs
src/security/: advanced_security.rs
src/trading/: order_manager.rs  (+2 more)
trading/: execution_engine.rs  liquidity_aggregator.rs  market_maker.rs  mod.rs  order_manager.rs  smart_order_router.rs
utils/: constants.rs  error_handling.rs
(+53 files in other folders)
