[package]
name = "algoveda-core"
version = "0.1.0"
edition = "2021"
authors = ["AlgoVeda Team"]
description = "Ultra-high performance algorithmic trading platform"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.5"
crossbeam = "0.8"
rayon = "1.7"
numpy = "0.20"
ndarray = "0.15"
polars = { version = "0.32", features = ["lazy"] }
arrow = "48.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
config = "0.13"
clap = { version = "4.4", features = ["derive"] }

# Performance optimizations
simd-json = "0.13"
ahash = "0.8"
parking_lot = "0.12"
flume = "0.11"

# Networking
reqwest = { version = "0.11", features = ["json"] }
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }

# Machine Learning
candle-core = "0.3"
candle-nn = "0.3"
linfa = "0.7"
smartcore = "0.3"

# GPU Computing
cudarc = { version = "0.9", features = ["cuda-11-8"] }

[dependencies.pyo3]
version = "0.19"
features = ["extension-module"]

[build-dependencies]
cc = "1.0"
bindgen = "0.68"
cmake = "0.1"

[features]
default = ["simd", "cuda"]
simd = []
cuda = ["cudarc"]
python-bindings = ["pyo3"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]
